# rust-hid-gat

./: .gitignore  Cargo.toml  foo.rs
bitgen/: Cargo.toml
bitgen/src/: common.rs  construct.rs  destruct.rs  implementer.rs  implementer_example.rs  main.rs  somegen.rs  somegen_gen.rs
hid-gatt/: Cargo.toml
hid-gatt/src/: hcimanager.rs  main.rs  pairinghandler.rs  socket.rs
src/: atthandler.rs  c1.rs  command.rs  controller.rs  core.rs  core_gen.rs  event.rs  gatt.rs  hcimanager.rs  lib.rs  main.rs  messages.rs  messages_impl.rs  packer.rs  packets.rs  pairinghandler.rs  parrot.rs  primitives.rs  smp.rs  socket.rs
tests/: hcidump-01.txt  hcidump-02.txt  hcidump-03.txt  hcidump_test.rs  various_things_tests.rs
