[package]
name = "rust-hid-gat"
version = "0.1.0"
edition = "2024"

[dependencies]
bt-hci = "0.2.1"
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread", "log"] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["log", "std", ] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
env_logger = "0.11.8"
libc = "0.2.171"
log = "0.4.27"
static_cell = "2.1.0"
trouble = "0.0.0"
trouble-host = { version = "0.1.0", features = ["derive", "scan"] }
trouble-host-macros = "0.1.0"
tokio = { version = "1", features = ["full"] }
aes = "0.8.4"
cipher = "0.4.4"
byteorder = "1.4.3"