[package]
name = "bt-only-headers"
version = "0.1.0"
edition = "2024"

[dependencies]
bt-hci = "0.2.1"
embassy-executor = { version = "0.7.0", features = [
    "arch-std",
    "executor-thread",
    "log",
] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["log", "std"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
env_logger = "0.11.8"
libc = "0.2.172"
log = "0.4.27"
static_cell = "2.1.0"
trouble = "0.0.0"
trouble-host = { version = "0.1.0", features = ["derive", "scan"] }
trouble-host-macros = "0.1.0"
tokio = { version = "1.44", features = ["full"] }
aes = "0.8.4"
cipher = "0.4.4"

deku = "0.18.1"
no_std_io = "0.6.0"

# facet-reflect = { version = "0.7.0" }
# facet-core = { version = "0.7.0" }
facet = "0.9.6"
facet-reflect = "0.10.3"

[workspace]
members = ["bitgen", "hid-gatt"]
